# pragmastat

./: .dockerignore  .gitignore  404.html  AGENTS.md  CITATION.cff  CNAME  LICENSE.md  README.md  build.cmd  build.sh  docker-compose.yml  docker-run.sh  index.html  mise.toml  pragmastat.md  references.json  sitemap.xml
.claude/: settings.json
_astro/: DocsLayout.astro_astro_type_script_index_0_lang.Drf88MQ-.js  DocsLayout.astro_astro_type_script_index_0_lang.OF3A13V9.js  _slug_.BJM9MGeo.css  _slug_.BjF03MU3.css  _slug_.Cas1MqtR.css  _slug_.Crv_D_PQ.css  _slug_.D0GG3hTj.css  _slug_.DCZT5byF.css  _slug_.WLFREvr1.css
additive/: index.html
algorithms/: index.html
artifacts/: index.html
assumptions/: index.html
authors/: index.html
avg-spread/: index.html
avg-spread-bounds/: index.html
bibliography/: index.html
center/: index.html
center-bounds/: index.html
colophon/: index.html
compare1/: index.html
compare2/: index.html
cs/: .editorconfig  .gitignore  AGENTS.md  Directory.Build.props  Dockerfile  Pragmastat.sln  Pragmastat.sln.DotSettings  README.md  build.sh  index.html
css/: styles.min.3f2668c6691592f5edc71a25bea4c84a192b78de7d38618c841980c8175d0a1c.css  styles.min.56b192e2af464418c36b4c0b68c0c224fa2a7b50c70ae6a7451087e3d6e1415c.css  styles.min.595865c63bc3c05764dbb68377fea857dee42e5bf44e88e6add95436ce1753c8.css  styles.min.9a8c0bede4e29170f02483fce29daf304501e571672f47c06b2cc83927c72667.css  styles.min.a02a7103a5adad2a964f5bc21ea7cce54690a3fdb5459e7af8ffaa5b4913257c.css  styles.min.d72e881da49b461e7bde354236584913fbb81748c7b19b1d6fd738ff3fd34778.css
disparity/: index.html
disparity-bounds/: index.html
distributions/: index.html
dotnet/: .gitignore  Directory.Build.props  Pragmastat.sln  Pragmastat.sln.DotSettings  README.md  index.html
estimators/: index.html
exp/: index.html
foundations/: index.html
go/: .gitignore  .golangci.yml  AGENTS.md  Dockerfile  LICENSE  README.md  additive.go  assume_sorted_test.go  assumptions.go  assumptions_test.go  build.sh  center_convergence_test.go  center_impl.go  center_quantiles_impl.go  compare.go  compare_test.go  distribution.go  dualpath_test.go  estimators.go  estimators_test.go  exp.go  fast_center.go  fast_center_quantiles.go  fast_shift.go  fast_shift_test.go  fast_spread.go  gauss_cdf.go  go.mod  index.html  invariance_test.go  measurement.go  measurement_unit.go  min_misrate.go  multiplic.go  mutation_test.go  pairwise_margin.go  performance_test.go  power.go  properties_test.go  ratio_bounds_test.go  (+14 more)
img/: .gitignore  Dockerfile  build.sh  generate-images.R  generate-images.py  generate-logo.R  generate-logo.py  init.R  utils.R  utils.py
implementations/: index.html
index/: index.html
introduction/: index.html
kotlin/: LICENSE  README.md  build.gradle.kts  build.sh  index.html  pubkey.asc
kt/: .editorconfig  .gitignore  AGENTS.md  Dockerfile  README.md  build.gradle.kts  build.sh  gradle.properties  index.html  settings.gradle.kts
manual/: abstract.md  abstract.typ  algorithms.md  artifacts.md  definitions.typ  definitions.yaml  distributions.md  estimators.md  implementations.md  introduction.md  main.md  main.typ  methodology.md  preliminaries.md  properties.md  references.yaml  studies.md  template.typ  tests.md  toolkit.md  version.typ
median/: index.html
methodology/: index.html
multiplic/: index.html
pairwise-margin/: index.html
pdf/: .gitignore  Dockerfile  build.sh  main.R  pragmastat.Rmd.template  pragmastat.md.template
power/: index.html
prompts/: cleanup.md  context-build.md  context-manual.md  context-repo.md  load-context.md  proofread-impl.md  proofread-implementations.md  proofread-manual.md  proofread-prompts.md  unify-demo.md  unify-tests.md  unify-version.md
properties/: index.html
py/: .flake8  AGENTS.md  Dockerfile  README.md  build.sh  index.html  pyproject.toml  setup.py
py/examples/: demo.py
py/pragmastat/: __init__.py  _center_quantiles_impl.py  _constants.py  _fast_center_quantiles.py  assumptions.py  bounds.py  center_impl.py  compare.py  estimators.py  fast_center.py  fast_shift.py  fast_spread.py  gauss_cdf.py  measurement.py  measurement_unit.py  min_misrate.py  pairwise_margin.py  rng.py  sample.py  shift_impl.py  sign_margin.py  signed_rank_margin.py  spread_impl.py  unit_registry.py  xoshiro256.py
py/pragmastat/distributions/: __init__.py  additive.py  distribution.py  exp.py  multiplic.py  power.py  uniform.py
py/src/: center_impl_c.c  fast_center_c.c  shift_impl_c.c  spread_impl_c.c
py/tests/: test_assume_sorted.py  test_assumptions.py  test_invariance.py  test_mutation.py  test_performance.py  test_reference.py
python/: .gitignore  README.md  build.sh  index.html  pyproject.toml
python/pragmastat/: __init__.py  estimators.py
python/tests/: test_invariance.py  test_reference.py
r/: .gitignore  AGENTS.md  Dockerfile  README.md  build.sh  docker-entrypoint.sh  index.html  sim_efficiency_central_tendency.R  sim_efficiency_dispersion.R  sim_precision_coverage.R
ratio/: index.html
ratio-bounds/: index.html
references/: index.html
resample/: index.html
rng/: index.html
rs/: .gitignore  AGENTS.md  Dockerfile  README.md  build.sh  index.html
rs/pragmastat-sim/: Cargo.toml
rs/pragmastat-sim/src/: cli.rs  distributions.rs  estimators.rs  main.rs  output.rs  progress.rs  runner.rs  sample_sizes.rs
rs/pragmastat-sim/src/sim/: avg_drift.rs  avg_spread_bounds.rs  bounds.rs  bounds_width.rs  center_bounds.rs  disp_drift.rs  disparity_bounds.rs  drift.rs  mod.rs  ratio_bounds.rs  shift_bounds.rs  spread_bounds.rs
rust/: build.sh  index.html
rust/pragmastat/: Cargo.toml  README.md
rust/pragmastat/examples/: demo.rs
rust/pragmastat/src/: estimators.rs  fast_spread.rs  lib.rs
rust/pragmastat/tests/: invariance_tests.rs  performance_tests.rs  reference_tests.rs
sample/: index.html
shift-bounds/: index.html
tools/: Cargo.toml
tools/src/: astro.rs  bounds_width.rs  definitions.rs  hayagriva.rs  img.rs  main.rs  math_conv.rs  templates.rs  typst_eval.rs  typst_parser.rs  version.rs  xref.rs
(+2538 files in other folders)
