[package]
name = "pragmastat-tools"
version = "0.1.0"
edition = "2024"
authors = ["Andrey Akinshin"]
description = "Documentation conversion tool for Pragmastat"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
anyhow = "1"
resvg = "0.45"
png = "0.17"
typst-syntax = "0.13"
hayagriva = "0.9"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
