[package]
name = "pragmastat-sim"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
pragmastat = { path = "../pragmastat" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
rayon = "1.10"
indicatif = "0.17"
console = "0.15"
