[package]
name = "pragmastat"
version = "3.1.17"
edition = "2021"
authors = ["Andrey Akinshin"]
description = "Pragmastat: Pragmatic Statistical Toolkit"
license = "MIT"
repository = "https://github.com/AndreyAkinshin/pragmastat"
documentation = "https://pragmastat.dev"
homepage = "https://pragmastat.dev"
keywords = ["statistics"]
categories = ["mathematics"]

[package.metadata]
doi = "10.5281/zenodo.17236778"

[dependencies]
rand = "0.8"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
float-cmp = "0.10"

[lib]
name = "pragmastat"
path = "src/lib.rs"